--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -15,13 +15,7 @@ import '../styles/Components/header.css';
             <ul class="nav-menu">
                 <li><a href="/" class="nav-link">Home</a></li>
                 <li><a href="/about" class="nav-link">About</a></li>
-                <li class="dropdown">
-                    <a href="/strenghtsports" class="nav-link">Strength Sports</a>
-                    <ul class="dropdown-menu">
-                        <li><a href="/strenghtsports/powerlifting">Powerlifting</a></li>
-                        <li><a href="/strenghtsports">All Sports</a></li>
-                    </ul>
-                </li>
+                <li><a href="/strenghtsports" class="nav-link">Strenghtsports</a></li>
                 <li><a href="/become-a-member" class="nav-link">Membership</a></li>
                 <li><a href="/committee" class="nav-link">Committees</a></li>
                 <li><a href="https://merch.tskvspartacus.nl/" target="_blank" class="nav-link">Webshop</a></li>
