--- a/src/pages/strenghtsports.astro
+++ b/src/pages/strenghtsports.astro
@@ -61,13 +61,13 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
                         <br>
                         <p>Whether you're looking to compete or simply get stronger, our powerlifting program provides the perfect foundation.</p>
                         <a href="powerlifting" class="btn">Learn more</a>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdSXlvtX-MaUvgCUhzlEINZGP-QWAqJkiscxRrLn7XSVLUbvA/viewform?usp=sf_link" target="_blank" class="btn btn-secondary">Aply for coaching</a>
+                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSdSXlvtX-MaUvgCUhzlEINZGP-QWAqJkiscxRrLn7XSVLUbvA/viewform?usp=sf_link" target="_blank" class="btn btn-secondary">Apply for coaching</a>
                     </div>
                     <div class="about-image">
                         <img src="placeholder-powerlifting.jpg" alt="Powerlifting at Spartacus">
                     </div>
                 </div>
-            </section>
+            </section>   
 
             <!-- Bodybuilding -->
             <section class="section">
